testing/src/java7srclisting/errors/ErrorV11.java
package java7srclisting.errors;

public class ErrorV11 {

    String test = "";

    void test() {
        try {
            // "//";
        } catch (Throwable x) {

        }
    }

}
